--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     <header>
         <h1>Keystone</h1>
         <p>Empowering Talented International Students to Access Higher Education</p>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="student-profiles.html">Student Profiles</a></li>
+                <li><a href="investor-opportunities.html">Investor Opportunities</a></li>
+                <li><a href="assessment.html">Assessment</a></li>
+                <li><a href="why-it-matters.html">Why It Matters</a></li>
+            </ul>
+        </nav>
     </header>
 
     <section id="student-profiles">
