Redesign homepage to improve visual appeal and user experience
---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/mg-lopez/keystone-platform?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/index.html
+++ b/index.html
@@ -21,29 +21,61 @@
         </nav>
     </header>
 
-    <section id="student-profiles">
+    <section id="hero">
+        <div class="hero-content">
+            <h2>Unlock Your Potential with Keystone</h2>
+            <p>Join us in empowering talented international students to access higher education.</p>
+            <button class="cta-button" onclick="handleCTAClick()">Get Started</button>
+        </div>
+    </section>
+
+    <section id="student-profiles" class="grid-section">
         <h2>Student Profiles</h2>
         <p>A platform where students can highlight their achievements, aspirations, and funding needs through written profiles or presentation videos.</p>
     </section>
 
-    <section id="investor-opportunities">
+    <section id="investor-opportunities" class="grid-section">
         <h2>Investor Opportunities</h2>
         <p>Investors can either donate directly or negotiate loans through Keystone, offering tailored terms without requiring collateral or credit scores.</p>
     </section>
 
-    <section id="assessment-process">
+    <section id="assessment-process" class="grid-section">
         <h2>Thorough Assessment</h2>
         <p>Keystone evaluates students’ earning potential and motivations through their CVs, past work experiences, written samples, or interviews to ensure they are a suitable match for funding.</p>
     </section>
 
-    <section id="win-win-model">
+    <section id="win-win-model" class="grid-section">
         <h2>Win-Win Model</h2>
         <p>Students gain access to education, investors enjoy high returns, and Keystone earns a commission for facilitating the process.</p>
     </section>
 
-    <section id="why-it-matters">
+    <section id="why-it-matters" class="grid-section">
         <h2>Why It Matters</h2>
         <p>Keystone eliminates barriers to education for talented students, ensuring their potential is not wasted due to financial constraints. By offering a more inclusive and personalized alternative to traditional loans, Keystone creates opportunities for students to focus on their studies and unlock their full potential. At the same time, it provides investors with a structured way to support education while earning returns.</p>
     </section>
+
+    <section id="testimonials">
+        <h2>Testimonials</h2>
+        <div class="testimonial">
+            <p>"Keystone helped me achieve my dream of studying abroad. I couldn't have done it without their support!"</p>
+            <p>- John Doe, Student</p>
+        </div>
+        <div class="testimonial">
+            <p>"Investing in students through Keystone has been a rewarding experience. I'm proud to support their education."</p>
+            <p>- Jane Smith, Investor</p>
+        </div>
+    </section>
+
+    <footer>
+        <div class="footer-content">
+            <p>Contact us: info@keystone.com</p>
+            <p>Follow us on social media:</p>
+            <ul class="social-media-links">
+                <li><a href="#">Facebook</a></li>
+                <li><a href="#">Twitter</a></li>
+                <li><a href="#">LinkedIn</a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
