--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
     </section>
 
-    <section id="student-profiles" class="grid-section">
+    <section id="student-profile" class="grid-section">
         <h2>Student Profiles</h2>
         <p>A platform where students can highlight their achievements, aspirations, and funding needs through written profiles or presentation videos.</p>
     </section>
