--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Keystone: Empowering Talented International Students to Access Higher Education</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="app.js" defer></script>
 </head>
 <body>
     <header>
@@ -18,6 +19,11 @@
                 <li><a href="assessment.html">Assessment</a></li>
                 <li><a href="why-it-matters.html">Why It Matters</a></li>
             </ul>
+            <div class="hamburger-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </nav>
     </header>
 
@@ -32,6 +38,18 @@
     <section id="student-profiles" class="grid-section">
         <h2>Student Profiles</h2>
         <p>A platform where students can highlight their achievements, aspirations, and funding needs through written profiles or presentation videos.</p>
+        <div class="profile-card">
+            <img src="profile-picture.jpg" alt="Profile Picture">
+            <h3>John Doe</h3>
+            <p><strong>About Me:</strong> Graduated with honors in Computer Science. Aspiring software engineer at a top tech company.</p>
+            <button class="expand-button" onclick="expandProfile('john-doe')">View More</button>
+        </div>
+        <div class="profile-card">
+            <img src="profile-picture.jpg" alt="Profile Picture">
+            <h3>Jane Smith</h3>
+            <p><strong>About Me:</strong> Published research in international journals. Aspiring to pursue a PhD in Biomedical Engineering.</p>
+            <button class="expand-button" onclick="expandProfile('jane-smith')">View More</button>
+        </div>
     </section>
 
     <section id="investor-opportunities" class="grid-section">
