Redesign homepage for visual appeal and user-friendliness
---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/mg-lopez/keystone-platform/tree/main?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
     <section id="student-profiles" class="grid-section">
         <h2>Student Profiles</h2>
         <p>A platform where students can highlight their achievements, aspirations, and funding needs through written profiles or presentation videos.</p>
+        <div id="student-profiles-container"></div>
+        <button id="load-more-button" class="cta-button">Load More</button>
     </section>
 
     <section id="investor-opportunities" class="grid-section">
@@ -77,5 +79,7 @@
             </ul>
         </div>
     </footer>
+
+    <script src="app.js"></script>
 </body>
 </html>
